apps/base/langfuse/07-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: langfuse-http-redirect
  namespace: langfuse
  labels:
    app.kubernetes.io/name: langfuse
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: argocd
      sectionName: http
  hostnames:
    - langfuse.paulojauregui.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: langfuse
  namespace: langfuse
  labels:
    app.kubernetes.io/name: langfuse
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: argocd
      sectionName: https-public
  hostnames:
    - langfuse.paulojauregui.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: langfuse-web
          port: 3000
          weight: 1
